--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0-beta.0",
     "autoprefixer": "^10.4.14",
+    "dotenv": "^16.4.1",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
